example/deploy/kube-scheduler/scheduler-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-scheduler
  namespace: kube-system
  labels:
    k8s-app: kube-scheduler
spec:
  ports:
    - name: http-metrics
      port: 10251
      protocol: TCP
      targetPort: 10251
  selector:
    component: kube-scheduler
    tier: control-plane

  sessionAffinity: None
