example/deploy/kube-scheduler/scheduler-ing.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-scheduler
  namespace: kube-system
spec:
  rules:
    - host: scheduler.talcoding.com
      http:
        paths:
          - backend:
              serviceName: kube-scheduler
              servicePort: 10251
